combinatorical insertion generation for multiple access-egress stops